k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexxau
  labels:
    name: nexxau
    app: nexxau
